# cast

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  index.html  server.py
docs/: demo-script.md  demo-video-script.md  upstream-findings.md
scripts/: b2_roundtrip.py  clone_my_voice.py  e2e_proof.py  lmnt_voice_test.py  make_localized.py
src/cast/: __init__.py  _fileurl.py  assemble.py  failover.py  languages.py  localize.py  storage.py  synthesize.py  transcribe.py  translate.py
src/cast/genblaze_anthropic/: __init__.py  _errors.py  provider.py
src/cast/genblaze_lmnt2/: __init__.py  provider.py
tests/: test_anthropic_provider.py  test_failover.py
work/: transcript.json
